# wordlesolver

./: .gitignore  .gitlab-ci.yml  LICENSE  Pipfile  README.md  analytics.py  analytics_test.py  bootstrap.py  cli.py  data.py  data_test.py  pyproject.toml  setup.cfg  stability_test.py  yourproject.py  yourproject_test.py
tests/: analytics_test.py  conftest.py  data_test.py  performance_test.py  stability_test.py
wordlesolver/: __init__.py  analytics.py  cli.py  data.py
