[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "wordlesolver"
version = "0.9.0"
authors = [{ name = "Gino Latorilla", email = "pblatorilla@gmail.com" }]
description = "Helps you win a Wordle game"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = { text = "MIT" }
requires-python = ">=3.6"
dependencies = ["rich==11.0.0"]

[project.scripts]
wordlesolver = "wordlesolver.cli:main"

[project.urls]
Repository = "https://github.com/ginolatorilla/wordlesolver"

[project.optional-dependencies]
dev = [
    "pycodestyle",
    "yapf",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "assertpy",
]

# Warning: Support for this is in beta phase.
# See https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#setuptools-specific-configuration
[tool.setuptools]
zip-safe = false

[tool.pycodestyle]
exclude = ".venv"
max-line-length = 119

[tool.yapf]
column_limit = 119

[tool.pytest.ini_options]
addopts = ["--cov", "--cov-report=term"]
testpaths = ["tests/"]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = true
log_cli_level = "DEBUG"

[tool.coverage.run]
branch = true
omit = ["tests/*"]

[tool.mypy]
exclude = """(?x)(
    site-packages
    | node_modules
    | tests
  )"""
