[metadata]
name = wordlesolver
version = 0.9.0
author = Gino Latorilla
author_email = pblatorilla@gmail.com
description = Helps you win a Wordle game
long_description = file: README.md
url = https://github.com/ginolatorilla/wordlesolver
project_urls =
    Bug Tracker = https://github.com/ginolatorilla/wordlesolver/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
install_requires =
    rich==11.0.0

[options.entry_points]
console_scripts =
    wordlesolver = cli:main

[options.packages.find]
exclude =
    tests
    tests/*
    *test.py
    bootstrap.py

[pycodestyle]
exclude = .venv
max-line-length = 119

[tool:pytest]
addopts = --cov

[coverage:run]
branch = true
omit =
    *test.py
    bootstrap.py

[mypy]
show_error_codes = true
strict = true
exclude =
    bootstrap.py
